fix removing commands from server not working
add support for multiple serverIds for register/removing commands
switch to appache httpClient java.net httpclient had much higher delay
httpclient switch stopped display from getting stuck on a single gif
merged separate gif command to image command