@@ -1,33 +1,30 @@
 package bot.pixxoo;
 
 import bot.Config;
-import com.google.gson.Gson;
+import org.apache.http.HttpResponse;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.entity.StringEntity;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
-import java.net.URL;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 
 public class PixooRequestUtility {
     private static final Logger logger = LoggerFactory.getLogger(PixooRequestUtility.class);
 
-    public static void sendImage(String imageUrl) {
-        try {
-            sendResetPicId();
-            logger.error(imageUrl);
-            PixooImage image = new PixooImage(new URL(imageUrl));
-            PixooSendAnimationRequest pixooAnimation = new PixooSendAnimationRequest();
-            pixooAnimation.setPicId(System.currentTimeMillis());
-            pixooAnimation.setPicData(image.getBase64Image());
-            sendHttpRequestAsync(pixooAnimation.toJsonString());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+    public static void sendResetPicId() {
+        PixooSendResetPicId pixooResetPicId = new PixooSendResetPicId();
+        sendHttpRequest(pixooResetPicId.toJsonString());
+    }
+
+    public static void sendClearTextArea() {
+        PixooSendClearTextArea pixooSendClearTextArea = new PixooSendClearTextArea();
+        sendHttpRequest(pixooSendClearTextArea.toJsonString());
     }
 
     public static void sendText(String text) {
@@ -35,83 +32,65 @@ public class PixooRequestUtility {
         PixooSendTextRequest pixooText = new PixooSendTextRequest();
         pixooText.setTextString(text);
         logger.error(pixooText.toJsonString());
-        sendHttpRequestAsync(pixooText.toJsonString());
+        sendHttpRequest(pixooText.toJsonString());
     }
 
-    public static void sendResetPicId() {
-        PixooSendResetPicId pixooResetPicId = new PixooSendResetPicId();
-        sendHttpRequestSync(pixooResetPicId.toJsonString());
-    }
-
-    public static void sendClearTextArea() {
-        PixooSendClearTextArea pixooSendClearTextArea = new PixooSendClearTextArea();
+    public static void sendSingleFrameImage(String imageUrl) {
+        try {
+            sendResetPicId();
+            logger.error(imageUrl);
+            PixooImage image = new PixooImage(new URI(imageUrl));
+            PixooSendAnimationRequest pixooAnimation = new PixooSendAnimationRequest();
+            pixooAnimation.setPicId(System.currentTimeMillis());
+            pixooAnimation.setPicData(image.getBase64Image());
+            sendHttpRequest(pixooAnimation.toJsonString());
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static void sendGif(String url) {
         sendResetPicId();
         long picId = System.currentTimeMillis();
         try {
-            ArrayList<PixooImage> frames = PixooImage.getGifFrames(new URL(url));
-            logger.error("gif frames: {}", frames.size());
-
+            ArrayList<PixooImage> frames = PixooImage.createGifFrames(new URI(url));
+            logger.info("gif frames: {}", frames.size());
+            logger.info("{}", url);
+            PixooSendAnimationRequest pixooSendAnimationRequest = new PixooSendAnimationRequest();
+            int animationFrames = Math.min(frames.size(), 60);
+            pixooSendAnimationRequest.setPicNum(animationFrames);
+            pixooSendAnimationRequest.setPicId(picId);
             Thread thread = new Thread(() -> {
                 if (!frames.isEmpty()) {
-                    for (int i = 0; i < frames.size(); i++) {
+                    for (int i = 0; i < animationFrames; i++) {
                         PixooImage currentFrame = frames.get(i);
-                        PixooSendAnimationRequest pixooSendAnimationRequest = new PixooSendAnimationRequest();
-                        pixooSendAnimationRequest.setPicNum(frames.size());
-                        pixooSendAnimationRequest.setPicId(picId);
                         pixooSendAnimationRequest.setPicOffset(i);
                         pixooSendAnimationRequest.setPicData(currentFrame.getBase64Image());
-                        sendHttpRequestSync(pixooSendAnimationRequest.toJsonString());
+                        sendHttpRequest(pixooSendAnimationRequest.toJsonString());
                     }
                 }
             });
             thread.start();
-//aq
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private static void sendHttpRequestAsync(String body) {
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(Config.getInstance().getPixooRequestUrl()))
-                .POST(HttpRequest.BodyPublishers.ofString(body))
-                .header("Content-Type", "application/json")
-                .version(HttpClient.Version.HTTP_1_1)
-                .build();
-
-        client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .thenApply(HttpResponse::body)
-                .thenAccept(res -> {
-                    System.out.println("Thread is: " + Thread.currentThread().getName());
-                    Gson gson = new Gson();
-                    PixooResponse pixooResponse = gson.fromJson(res, PixooResponse.class);
-                    logger.info("Response from pixoo: {} {}", res, pixooResponse.getErrorCode());
-                });
-
-    }
-
-
-    private static void sendHttpRequestSync(String body) {
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(Config.getInstance().getPixooRequestUrl()))
-                .POST(HttpRequest.BodyPublishers.ofString(body))
-                .header("Content-Type", "application/json")
-                .version(HttpClient.Version.HTTP_1_1)
-                .build();
-
+    private static void sendHttpRequest(String body) {
         try {
-            HttpResponse response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            logger.info("response: {}", response.toString());
-        } catch (IOException | InterruptedException e) {
+            HttpPost post = new HttpPost(Config.getInstance().getPixooRequestUrl());
+            final StringEntity entity = new StringEntity(body);
+            post.setEntity(entity);
+            post.setHeader("Accept", "application/json");
+            post.setHeader("Content-type", "application/json");
+            try (CloseableHttpClient client = HttpClients.createDefault()) {
+                HttpResponse response = client.execute(post);
+                logger.info("{}", response);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        } catch (UnsupportedEncodingException e) {
             throw new RuntimeException(e);
         }
     }
-
-
-
 }
